--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyB7ujALqDsMEGfPr7wyZQpaDjfvfD1O1hw"
+          "apiKey": ""
         }
       },
       "permissions": [
